classDiagram
    direction LR

    class Intersection {
        +Coordinate: Vector
    }
    class Segment {
        +Length() Double
    }
    class Location {
        +Distance: Double
    }
    class ChargingStation {
        -CurrentChargeSpeed: Double
    }
    class Vehicle {
        +Width: Double
        +Length: Double
        +MaximumBatteryLevel: Double
        +InitialBatteryLevel: Double
        -CurrentBatteryLevel: Double
        -CurrentDriveSpeed: Double
    }
    class Demand {
        +Size: Double
        +AppearTime: Double
        +EarliestPickupTime: Double
        +LatestDropoffTime: Double
    }
    
    ChargingStation --> "1" Location:+Location
    ChargingStation --> "0..1" Vehicle:-CurrentVehicle
    Vehicle --> "1" Location:+InitialLocation
    Vehicle --> "1" Location:-CurrentLocation
    Demand --> "1" Location:+PickupLocation
    Demand --> "1" Location:+DropoffLocation
    Demand --> "1" Location:-CurrentLocation
    Demand --> "0..1" Vehicle:-CurrentVehicle
    Segment <-- "1" Location:+Segment
    Intersection <-- "1" Segment:+SourceIntersection
    Intersection <-- "1" Segment:+TargetIntersection